<resources>
    <string name="app_name">VideoImage upload</string>
    <string name="gamers254">gamers254</string>
    <string name="thewick3rman">wick3rman</string>
    <string name="legday">legday</string>
    <string name="thatass">thatass</string>
    <string name="baegoals">baegoals</string>
    <string name="bae">bae</string>
    <string name="gym">gym</string>
    <string name="my_bae_lifting_squats_like_you_lift_your_toilet_seat_64_bars_like_it_ain_t_nothing">My Bae lifting squats like you lift your toilet seat. 64 bars like it ain\'t nothing!</string>
    <string name="dp">dp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="shop">Shop</string>
    <string name="events">Events</string>
    <string name="logo_of_th_page">logo254</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="game_on">Game On</string>
    <string name="or">OR</string>
    <string name="create_account">Create Account</string>
    <string name="bars">bars</string>
    <string name="shareb">shareb</string>
    <string name="commentb">commentb</string>
    <string name="_2000">2000</string>
    <string name="iconview">iconview</string>
    <string name="zengu">Zengu</string>
    <string name="a_k_a">A.K.A.</string>
    <string name="_4_3_5">4.3/5</string>
    <string name="mtaa">Mtaa</string>

    <string name="post">post</string>
    <string name="text">Text</string>
    <string name="add">add</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="_1800hrs">1800hrs</string>
    <string name="_12_12_12">12/12/12</string>
    <string name="title">Title</string>
    <string name="posted_by_me">Posted by me</string>

    <string name="bruc3balo">bruc3balo</string>
    <string name="description">description</string>
    <string name="media_controls">Media Controls</string>
    <string name="username">Username</string>
    <string name="gamerTag">Gamertag</string>
    <string name="tobefilled">-</string>
    <string name="appna">254 Gamers</string>
</resources>