<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="4dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity">

    <!--
        <androidx.appcompat.widget.Toolbar
            app:title="@string/appna"
            app:titleTextColor="#ffffff"
            android:layout_marginTop="5dp"
            android:background="@color/tbBlue"
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#868181"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>-->

    <RelativeLayout
        android:id="@+id/vpBg"
        android:layout_margin="1dp"
        android:padding="2dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- <ImageView
             android:foreground="@mipmap/logo_foreground"
             android:foregroundGravity="top|center"
             android:foregroundTint="@color/transparent"
             android:id="@+id/backGround"
             android:adjustViewBounds="true"
             android:src="@color/transparent"
             android:tint="@color/semiWhite"
             android:layout_margin="2dp"
             android:layout_gravity="center"
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="3dp"/>
  -->

        <androidx.viewpager2.widget.ViewPager2
            android:nestedScrollingEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_margin="5dp"
            android:layout_above="@id/controlCard"
            android:id="@+id/viewPager2"/>

        <androidx.cardview.widget.CardView
            app:contentPadding="2dp"
            android:id="@+id/controlCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:elevation="12dp"
            app:cardBackgroundColor="@color/white"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="45dp"
            android:background="@color/white">

            <GridLayout
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">


                <GridView
                    android:id="@+id/controlGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:numColumns="4"
                    android:layout_margin="3dp"
                    android:padding="4dp"
                    android:layout_row="1"
                    android:background="@color/transparent"/>

            </GridLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <ImageButton
                android:layout_gravity="center"
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:tint="@color/niceBlue"
                android:background="@color/transparent"
                android:contentDescription="@string/shareb"
                android:src="@drawable/ic_share_black_24dp" />

            <ImageButton
                android:layout_gravity="center"
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/transparent"
                android:contentDescription="@string/commentb"
                android:src="@drawable/comment" />
            <LinearLayout
                android:background="@color/transparent"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:tint="@color/colorPrimaryVDark"
                    android:onClick="toggleControls"
                    android:layout_gravity="center"
                    android:id="@+id/viewicon"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/iconview"
                    android:src="@drawable/eye"/>

                <TextView
                    android:id="@+id/views"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/_2000"
                    android:layout_gravity="center"
                    android:textColor="#18B61B" />

                <TextView
                    android:fontFamily="@font/roboto_medium"
                    android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:layout_marginEnd="1dp"
                    android:drawableStart="@drawable/star"
                    android:gravity="center"
                    android:text="@string/_4_3_5"
                    android:textColor="#DFBB2A"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>