<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fitsSystemWindows="true"
        android:gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:contentPadding="8dp">

            <!--
        <ScrollView
            android:layout_gravity="fill"
            android:overScrollMode="ifContentScrolls"
            android:padding="4dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false">  </ScrollView>-->

            <LinearLayout
                android:padding="2dp"
                android:layout_gravity="fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:fontFamily="@font/roboto_medium"
                        android:id="@+id/gtag"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"

                        android:gravity="center"
                        android:singleLine="false"
                        android:text="@string/username"
                        android:textColor="#EE0D0D"
                        android:textSize="16sp" />

                    <TextView
                        android:fontFamily="@font/roboto_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:background="@drawable/text_input_bg"
                        android:backgroundTint="#2E2D2D"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/a_k_a"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="2dp"
                        android:singleLine="false"
                        android:gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/gamerTag"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#E9D5CB"
                        android:textSize="14sp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:nestedScrollingEnabled="false"
                    android:id="@+id/ratebar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:elevation="4dp"
                    android:outlineProvider="none"
                    android:backgroundTint="@color/transparent"
                    android:stepSize="1"
                    android:tooltipText="rate this post"
                    android:visibility="visible"
                    tools:targetApi="o" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:forceHasOverlappingRendering="true"
                    android:id="@+id/poster"
                    android:adjustViewBounds="true"
                    app:riv_corner_radius="12dp"
                    android:src="@drawable/tag"
                    android:layout_margin="2dp"
                    android:layout_gravity="center"
                    app:riv_border_width="3dp"
                    app:riv_mutate_background="true"
                    app:riv_tile_mode="clamp"
                    app:riv_border_color="@color/colorPrimaryVDark"
                    android:layout_width="match_parent"
                    android:minHeight="250dp"
                    android:maxHeight="280dp"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    tools:targetApi="n" />

                <TextView
                    android:background="@color/transparent"
                    android:layout_gravity="center"
                    android:id="@+id/title"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:maxHeight="60dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:textColor="#858B86"
                    android:maxHeight="70dp"
                    android:text="@string/my_bae_lifting_squats_like_you_lift_your_toilet_seat_64_bars_like_it_ain_t_nothing" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/tags_ChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@color/transparent"
                    android:fitsSystemWindows="true"
                    android:foregroundGravity="center"
                    android:padding="4dp"
                    android:theme="@style/Theme.MaterialComponents.Bridge"
                    app:chipSpacing="2dp"
                    app:itemSpacing="3dp"
                    app:singleLine="false"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/tobefilled"
                        app:chipIcon="@drawable/tag"
                        app:chipStrokeColor="@color/tbBlue"
                        app:chipStrokeWidth="3dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/tobefilled"
                        app:chipIcon="@drawable/tag"
                        app:chipStrokeColor="@color/tbBlue"
                        app:chipStrokeWidth="3dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/tobefilled"
                        app:chipIcon="@drawable/tag"
                        app:chipStrokeColor="@color/tbBlue"
                        app:chipStrokeWidth="3dp" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/tobefilled"
                        app:chipIcon="@drawable/tag"
                        app:chipStrokeColor="@color/tbBlue"
                        app:chipStrokeWidth="3dp" />





                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>


    </androidx.cardview.widget.CardView>
